--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: VOCALOID COLLECTION
 tagline: A collection of various Vocaloid goods
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "Koza and Sven's Vocaloid goods collection!"
+description: "A salty mountain goat and an anxious red panda collecting Vocaloid merch."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: vocaloid;merch;goods;anime;hatsune miku;meiko;kaito;kagamine rin;kagamine len;video game;megurine luka
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
