added metadata csv file

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ _site/
 .bundle/
 vendor/
 
-# Ignore mac files 
+# Ignore mac files
 .DS_Store
 
 # temporarily ignore gemfile.lock
@@ -17,3 +17,4 @@ Gemfile.lock
 # Ignore objects directory to avoid committing binary files (other than demo files)
 # if you would like to commit your objects to github, delete the line below!
 objects/
+_data/vocaloid_merch.csv
