--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author: Sven
 #
 # Set the metadata for your collection (the name of the CSV file in your _data directory that describes the objects in your collection)
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: vocaloid_merch
+metadata: bandori_merch
 # page generation settings [optional!]
 # [optional: only used if you need to tweak CB defaults or generate from more than one data file]
 # page_gen:
@@ -52,8 +52,8 @@ metadata: vocaloid_merch
 #
 organization-name: "KOZA.RIP"
 organization-link: https://koza.rip/
-organization-logo-banner: https://koza.rip/assets/koza-rip-logo-black.png
-organization-logo-nav: https://koza.rip/assets/koza-rip-logo-white.png
+organization-logo-banner: https://koza.rip/assets/Logo-Black.png
+organization-logo-nav: https://koza.rip/assets/Logo-White.png
 
 ##########
 # GOOGLE SERVICES [optional!]
