--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,8 @@ metadata: vocaloid_merch
 #
 organization-name: "KOZA.RIP"
 organization-link: https://koza.rip/
-organization-logo-banner: https://koza.rip/assets/koza-rip-logo-black.png
-organization-logo-nav: https://koza.rip/assets/koza-rip-logo-white.png
+organization-logo-banner: https://koza.rip/assets/Logo-Black.png
+organization-logo-nav: https://koza.rip/assets/Logo-White.png
 
 ##########
 # GOOGLE SERVICES [optional!]
