changed favicon updated gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,8 @@ Gemfile.lock
 # Ignore objects directory to avoid committing binary files (other than demo files)
 # if you would like to commit your objects to github, delete the line below!
 objects/
+
+# Custom ignore
 _data/vocaloid_merch.csv
+favicon.ico.old
+favicon.png
